syntax = "proto3";
package adfy.io.rpc.user;

import "validate/validate.proto";
import "protoc-gen-swagger/options/annotations.proto";


option go_package = "adfy.io/rpc/user";


option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
        title: "Adfy.io User Service Twirp/JSON API Documentation";
        version: "1.0";
    };
    external_docs: {
        url: "https://github.com/vldmr-k/adfy.io";
        description: "Adfy.io github repository";
    };
    schemes: HTTPS;
};


service UserService {

    rpc SignIn(SignInRequest) returns (SignInResponse);

    rpc SignUp(SignUpRequest) returns (SignUpResponse);

}

message SignUpRequest {
    string name = 1 [(validate.rules).string = {min_len: 3, max_len: 50}]; //required

    string email = 2  [
        (validate.rules).string.email = true
    ]; //required
    string password = 3  [(validate.rules).string.min_len = 6]; //required
}

message SignUpResponse {
    string token = 1;
}


message SignInRequest {
    string email = 1 [
        (validate.rules).string.email = true
    ];
    string password = 2 [(validate.rules).string.min_len = 6];
    bool rememberMe = 3; //(dafault true)
}

message SignInResponse {
    string token = 1; // required
}